static/css/all.css
/* ... */
	.sidebar-events h2 {
		margin: 1em -10px .5em;
		padding: .5em;
		background-color: rgba(50,100,200, .05);
		margin-bottom: 1em;
		font-size: 17px;
	}
		.sidebar-events h2:first-child {
			margin-top: -10px;
		}

/* A11y Changes, merge? */

/* skiptocontent from http://webaim.org/techniques/skipnav/ */
#skiptocontent a {
	padding:6px;
	position: absolute;
	top:-40px;
	left:0px;
	color:white;
	border-right:1px solid white;
	border-bottom:1px solid white;
	border-bottom-right-radius:8px;
	background:transparent;
	-webkit-transition: top 1s ease-out, background 1s linear;
    transition: top 1s ease-out, background 1s linear;
    z-index: 100;
}

#skiptocontent a:focus {
	position:absolute;
	left:0px;
	top:0px;
	background:#BF1722;
	outline:0;
	-webkit-transition: top .1s ease-in, background .5s linear;
    transition: top .1s ease-in, background .5s linear;
}

.nowrap {
	white-space: nowrap;
}

#followus_modal p { line-height: 132%; margin-bottom: 1em; }
#followus_modal .col-sm-6 p + div { margin-left: 50px; }
#followus_modal .modal-body .row > div > div { margin-bottom: 1.75em; }
#followus_modal .dropnum {
  color: #903;
  float: left;
  font-family: Georgia, Times New Roman, serif;
  font-weight: bold;
  font-size: 3em;
  line-height: .85em;
  padding-right: 12px;
  padding-left: 3px;
  padding-bottom: 5px;
}

#site_search_autocomplete_results {
	border-radius: 0 0 10px 10px;
	background-color: rgb(29, 78, 112);
	border: 1px solid rgb(29, 78, 112);
	padding: .5em 1em;
}
	#site_search_autocomplete_results .search-result-group {
		padding: 5px 0 3px 0;
		font-size: 90%;
		color: #DDD;
	}
		#site_search_autocomplete_results .search-result-group:first-child {
			padding-top: 0;
		}
	#site_search_autocomplete_results a.result-item {
		display: block;
		text-decoration: none;
		margin: 0 -1em;
		padding: .25em 1em;
		background-color: white;
		color: #444;
		border-bottom: 1px solid #DDD;
	}
		#site_search_autocomplete_results a.result-item:hover, #site_search_autocomplete_results a.result-item:focus {
			background-color: #9D2146;
			color: white;
		}
	#site_search_autocomplete_results .search-tips {
		font-size: 95%;
		line-height: 115%;
	}

#community-forum .community-forum-wrapper {
	margin-top: 2em;
	margin-bottom: 2em;
	border: 1px solid #CCC;
	padding: 15px;
}
	#community-forum .community-forum-wrapper.has-messages {
	}
	#community-forum .community-forum-teaser {
		font-size: 90%;
		color: #666;
	}
	#community-forum .community-forum-teaser span.glyphicon {
		color: #9D2146;
	}
	#community-forum .thread-wrapper {
		display: none;
	}
	#community-forum .has-messages .thread-wrapper {
		display: block;
	}
	#community-forum h3 {
		margin: -15px -15px 0 -15px;
		background-color: #9D2146;
		padding: 7px 15px;
		color: white;
		font-family: Quicksand;
	}
	#community-forum form {
		margin: 0;
		padding: 0;
	}
		#community-forum form label {
			font-weight: normal;
		}
	.community-forum-message {
		margin: 1em 0;
	}
		.community-forum-message .author {
			font-weight: bold;
		}
		#content .community-forum-message p {
			margin-bottom: .2em;
		}
	.community-forum-message-editor {
	}

#master-fundraiser-bar {
	background: #9D2146;
	padding: 4px;
	font-size: 90%;
	text-align: right;
}
	#master-fundraiser-bar a {
		color: white;
		text-decoration: none;
	}
	#master-fundraiser-bar span {
		margin: 3px;
		border-radius: 5px;
		padding: 0px 3px;
		background: #FD5;
		color: black;
		}

#seealso-links {
	background: #FDFDFD;
	border: 1px solid #DDD;
	border-radius: .5em;
	padding: 5px 15px 0px 15px;
    font-family: Quicksand;
    line-height: 150%;
}
    #seealso-links a {
        display: inline-block;
        text-decoration: none;
        margin-right: 1.25em;
        margin-bottom: .33em;
    }
        #seealso-links a:hover {
            text-decoration: underline;
        }
    #seealso-links a i {
        margin-right: .4em;
    }

